@@ -15,3 +15,9 @@ How to run:
 -Doctor:
   When executing the DoctorApp.java file the last shared logs will be read, marked as infected and sent to the server
   This means that a user must generate a log file before the doctor can be executed
+  
+In order to run any of the files, the javafx libraries need to be included in the external libraries folder of the project.
+The following VM options also need to be added to the run configurations of the 3 apps:
+
+--module-path "PATH-TO-LIBRARY" --add-modules javafx.controls,javafx.fxml
+
